# dqmc-framework

./: .gitignore  CMakeLists.txt  DetQMC.cpp  DetQMC.h  LICENSE  README.md  detQMC.cpp  detQMC.h  hubbard.cpp  hubbard.h  main.cpp  options.h  plotFig.py  svdstack.h
.github/workflows/: dqmc.yml  dqmc_test.yml  main.yml  make.yml
cmake/: FindMKL.cmake
example/: config.toml  log.out
example/output/: dos.bins.out  dos.out  dss.bins.out  dss.out  fields.out  greens.bins.out  greens.out  kstars.out  swave.bins.out  swave.out  tgrids.out
include/: CheckerBoard.h  DetQMC.h  DynamicMeasure.h  DynamicMeasureLinear.h  EqtimeMeasure.h  EqtimeMeasureLinear.h  Hubbard.h  MeasureData.h  SvdStack.h  checker_board.h  detQMC.h  detqmc.h  dqmc.h  dqmc_initializer.h  dqmc_io.h  dqmc_walker.h  dynamicMeasure.h  dynamic_measure.h  eqtimeMeasure.h  eqtime_measure.h  fft_solver.h  hubbard.h  measure.h  measure_container.h  measure_data.h  measure_methods.h  observable.h  output.h  random.h  svd_stack.h
include/checkerboard/: checkerboard_base.h  cubic.h  square.h  square2d.h
include/lattice/: cubic.h  honeycomb.h  lattice_base.h  square.h  square2d.h  square3d.h
include/measure/: measure_handler.h  measure_methods.h  observable.h  observable_handler.h
include/model/: attractive_hubbard.h  model_base.h  repulsive_hubbard.h  repulsive_hubbard_cbsquare2d.h
include/utils/: linear_algebra.hpp  mpi.hpp  numerical_stable.hpp  progress_bar.hpp  progressbar.hpp  random.hpp  toml.hpp
results/: dynamic-meas.py  dynamic-u4-attractive-pipi.txt  dynamic-u4-attractive.txt  dynamic-u4-repulsive-Ef.txt  dynamic-u4-repulsive-pipi.txt  eqtime-2particles-meas.py  eqtime-single-particle-meas.py  eqtime-two-particles-meas.py  fermi-surface-meas.py  meas-dynamic.txt  meas-eqtime.txt  plotFig_d_k.py
results/critical-temperature/: rhosForPlot_L_6_u_-4.0.txt  rhosForPlot_L_8_u_-4.0.txt  sc-rhos-meas.py  sc_rhos_L_6_u_-4.0.txt  sc_rhos_L_8_u_-4.0.txt
results/double-occu-over-Temp/: eq-u-4.txt  eqtime-over-temp.py
results/double-occu-over-U/: eq-beta-3.txt  eq-beta-5.txt  eqtime-single-particle-meas.py
results/equal-time-measurments/: eqtime-single-particle-meas.py
results/fermi-surface/: fermi-surface-meas.py  fermi_surface_L4_beta4_u-2.0.txt  fermi_surface_L4_beta4_u-4.0.txt  fermi_surface_L4_beta4_u0.0.txt  fermi_surface_L6_beta4_u-2.0.txt  fermi_surface_L6_beta4_u0.0.txt  fermi_surface_L8_beta4_u0.0.txt
run/: batch.sh  make.sh  run.sh
scripts/: run.sh  sbatch.sh  submit.sh
src/: BMatrixMult.hpp  CheckerBoard.cpp  DetQMC.cpp  DynamicMeasure.cpp  DynamicMeasureLinear.cpp  EqtimeMeasure.cpp  EqtimeMeasureLinear.cpp  Hubbard.cpp  MeasureData.cpp  ProgressBar.hpp  Random.hpp  StableGreens.h  StableGreens.hpp  SvdStack.cpp  SvdStack.hpp  b_matrix_mult.hpp  checker_board.cpp  detQMC.cpp  detQMC.h  detqmc.cpp  dqmc.cpp  dqmc_initializer.cpp  dqmc_main.cpp  dqmc_walker.cpp  dynamicMeasure.cpp  dynamic_measure.cpp  eigen_boost_serialization.hpp  eqtimeMeasure.cpp  eqtime_measure.cpp  fft.hpp  fft_solver.cpp  hubbard.cpp  hubbard.h  main.cpp  matrix_util.hpp  measure.cpp  measure_container.cpp  measure_data.cpp  measure_gather.hpp  measure_methods.cpp  (+7 more)
src/checkerboard/: cubic.cpp  square.cpp  square2d.cpp
src/lattice/: cubic.cpp  honeycomb.cpp  lattice_base.cpp  square.cpp  square2d.cpp  square3d.cpp
src/measure/: measure_handler.cpp  measure_methods.cpp  observable.cpp  observable_handler.cpp
src/model/: attractive_hubbard.cpp  model_base.cpp  repulsive_hubbard.cpp  repulsive_hubbard_cbsquare2d.cpp
src/utils/: fft_solver.cpp  svd_stack.cpp
test/: CMakeLists.txt  config.toml  test_main.cpp
